<resources>
    <string name="app_name">MovieMVVM</string>
    <string name="retry">Retry</string>
    <string name="action_search">Search</string>
    <string name="search_hint_movies">Search for movies</string>
    <string name="search_hint_tv_shows">Search for TV shows</string>
    <string name="text_popular">Popular</string>
    <string name="text_highest_rate">Highest rate</string>
    <string name="text_upcoming">Upcoming</string>
    <string name="summary">Summary</string>
    <string name="trailers">Trailers</string>
    <string name="cast">CTast</string>
    <string name="crew">Crew</string>
    <string name="biography">Biography</string>
    <string name="release_date">Release Date: %s</string>
    <string name="rating">%s/10</string>
    <string name="born">Born on %s</string>
    <string name="from">From %s</string>
    <string name="death">Death in %s</string>
    <string name="known_as">Also known as %1$s</string>
    <string name="transition_search_back" translatable="false">transition_search_back</string>

    // View name of the header image. Used for activity scene transitions
    <string name="view_name_header_image">detail:header:image</string>

    // View name of the header title. Used for activity scene transitions
    <string name="view_name_header_title">detail:header:title</string>

    <string name="menu_movies">Movies</string>
    <string name="menu_tv_series">TV Series</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>

    <string name="base_poster_path">http://image.tmdb.org/t/p/w342%s</string>
    <string name="base_backdrop_path">http://image.tmdb.org/t/p/w780%s</string>

    <string name="failed_loading_msg">Something went wrong &#8230;</string>
    <string name="failed_network_msg">No internet connection &#8230;</string>
</resources>
