<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_popular"
        android:icon="@drawable/ic_tv"
        android:title="@string/text_popular"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_upcoming"
        android:icon="@drawable/ic_star"
        android:title="@string/text_upcoming"
        app:showAsAction="ifRoom" />
</menu>