<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BaseFragment">

    <com.sample.android.moviemvvm.widget.AutofitRecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:columnWidth="@dimen/column_width"
        android:padding="@dimen/padding_small"
        tools:listitem="@layout/tmdb_item" />

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>